# rustnext

./: Cargo.toml  README.md  config.toml
examples/: blog_app.rs  enhanced_blog_app.rs  product_catalog_app.rs  project_dashboard_app.rs  todo_app.rs
src/: app.rs  auth.rs  cache.rs  compression.rs  database.rs  dev.rs  error.rs  file_upload.rs  handler.rs  lib.rs  logging.rs  metrics.rs  request.rs  response.rs  router.rs  server.rs  session.rs  static_files.rs  template.rs
src/api/: mod.rs
src/assets/: mod.rs
src/config/: mod.rs
src/forms/: mod.rs
src/middleware/: auth_guard.rs  mod.rs
src/ui/: component.rs  element.rs  mod.rs  page.rs  renderer.rs
