[package]
name = "rustnext"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern, fast web framework for Rust"
license = "MIT"
repository = "https://github.com/sazalo101/rustnext"
keywords = ["web", "framework", "async", "http"]
categories = ["web-programming::http-server"]

[features]
default = ["compression", "sessions", "static-files", "database", "cache"]
# Explicitly list the optional dependency and its features
compression = ["async-compression/tokio", "async-compression/gzip", "async-compression/brotli"]
sessions = ["cookie"]
static-files = ["mime_guess"]
metrics = []
dev = ["notify"]
# Explicitly list the optional dependency and its features
database = ["sqlx/postgres", "sqlx/runtime-tokio-rustls", "sqlx/chrono"]
# Explicitly list the optional dependency and its features
cache = ["redis/tokio-comp"]

[dependencies]
# Core dependencies
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
percent-encoding = "2.1"
futures = "0.3"
html-escape = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
md5 = "0.7"
num_cpus = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5" # For URL-encoded form parsing
log = "0.4" # For logging
env_logger = "0.11" # For logging implementation
once_cell = "1.19" # For safe global state initialization
toml = "0.8" # For config file parsing
urlencoding = "2.1" # Added urlencoding dependency

# Authentication and security
jsonwebtoken = "8.0"
bcrypt = "0.14"

# Database support (now conditional)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"], optional = true }
redis = { version = "0.23", features = ["tokio-comp"], optional = true }

# File upload support
multer = "2.0" # For multipart form parsing

# Optional dependencies for features (these are still needed here)
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"], optional = true }
cookie = { version = "0.17", optional = true }
mime_guess = { version = "2.0", optional = true }
notify = { version = "5.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "blog_app"
path = "examples/blog_app.rs"

[[example]]
name = "enhanced_blog_app"
path = "examples/enhanced_blog_app.rs"
